# action-rpg

./: Makefile  README.md  shell.nix
godot/: project.godot
godot/native/: Bush.gdns  Grass.gdns  GrassEffect.gdns  World.gdns  game.gdnlib
godot/scenes/: Bush.tscn  Game.tscn  Grass.tscn  GrassEffect.tscn  Player.tscn  World.tscn
rust/: Cargo.toml
rust/src/: bush.rs  game.rs  grass.rs  grass_effect.rs  lib.rs  player.rs  world.rs
